не доделано; не работает; я даун

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -1,1 +1,12 @@
-hentai = ХЕНТАЙ
+hud.menu = Menu
+hud.drawSize = {0}px
+hud.layer = Layer {0}/{1}
+
+canvas.new = New Canvas
+canvas.width = Width: {0}px
+canvas.height = Height: {0}px
+
+pencil.tooltip = It draws.
+eraser.tooltip = It erases.
+pick.tooltip = It picks.
+fill.tooltip = It fills.
