удаление и движение слоев

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -2,9 +2,16 @@ hud.menu = Menu
 hud.drawSize = {0}px
 hud.layer = Layer {0}/{1}
 
+swapped = Swapped colors.
+
 canvas.new = New Canvas
 canvas.width = Width: {0}px
 canvas.height = Height: {0}px
+
+color.red = [red]Red: {0}
+color.green = [green]Green: {0}
+color.blue = [blue]Blue: {0}
+color.alpha = Alpha: {0}
 
 pencil.tooltip = It draws.
 eraser.tooltip = It erases.
