--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -1,3 +1,12 @@
+cancel = Cancel
+save = Save
+load = Load
+
+file.save = Select a file to save...
+file.load = Select a file to load...
+
+file.name = File name:
+
 hud.menu = Menu
 hud.drawSize = {0}px
 hud.layer = Layer {0}/{1}
