вернул говнокод анюка

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -5,7 +5,7 @@ load = Load
 file.save = Select a file to save...
 file.load = Select a file to load...
 
-file.name = File name:
+filename = File name:
 
 hud.menu = Menu
 hud.drawSize = {0}px
