--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -1,11 +1,9 @@
+ok = Ok
 cancel = Cancel
-save = Save
-load = Load
 
 file.save = Select a file to save...
 file.load = Select a file to load...
-
-filename = File name:
+file.name = File name:
 
 hud.menu = Menu
 hud.drawSize = {0}px
