небольшая глубокая чистка

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -6,7 +6,7 @@ file.load = Select a file to load...
 file.name = File name:
 
 hud.menu = Menu
-hud.drawSize = {0}px
+hud.brushSize = {0}px
 hud.layer = Layer {0}/{1}
 
 swapped = Swapped colors.
