--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -6,7 +6,8 @@ file.load = Select a file to load...
 file.name = File name:
 
 hud.menu = Menu
-hud.brushSize = {0}px
+hud.size = {0}px
+hud.square = Square Brush
 
 swapped = Swapped colors.
 
