--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -1,11 +1,17 @@
 ok = Ok
 cancel = Cancel
 
+menu = Menu
+back = Back
+exit = Exit
+save = Save
+load = Load
+settings = Settings
+
 file.save = Select a file to save...
 file.load = Select a file to load...
 file.name = File name:
 
-hud.menu = Menu
 hud.size = {0}px
 hud.square = Square Brush
 
@@ -15,6 +21,7 @@ canvas.new = New Canvas
 canvas.width = Width: {0}px
 canvas.height = Height: {0}px
 
+color.pick = Pick a color
 color.red = [red]Red: {0}
 color.green = [green]Green: {0}
 color.blue = [blue]Blue: {0}
@@ -22,5 +29,6 @@ color.alpha = Alpha: {0}
 
 pencil.tooltip = It draws.
 eraser.tooltip = It erases.
-pick.tooltip = It picks.
 fill.tooltip = It fills.
+line.tooltip = It does nothing. LOL
+pick.tooltip = It picks.
