todo доделать сайдлеер

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -15,7 +15,7 @@ file.name = File name:
 hud.size = {0}px
 hud.square = Square Brush
 
-swapped = Swapped colors.
+swapped = Swapped colors
 
 canvas.new = New Canvas
 canvas.width = Width: {0}px
@@ -27,8 +27,13 @@ color.green = [green]Green: {0}
 color.blue = [blue]Blue: {0}
 color.alpha = Alpha: {0}
 
-pencil.tooltip = It draws.
-eraser.tooltip = It erases.
-fill.tooltip = It fills.
-line.tooltip = It does nothing. LOL
-pick.tooltip = It picks.
+pencil.tooltip = It draws
+eraser.tooltip = It erases
+fill.tooltip = It fills
+line.tooltip = It does nothing LOL
+pick.tooltip = It picks
+
+layer.new = New layer
+layer.remove = Remove
+layer.move.up = Move up
+layer.move.down = Move down
