Поддержка звуков и дофига всего

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -15,9 +15,11 @@ file.name = File name:
 hud.size = {0}px
 hud.square = Square Brush
 
+saved = Saved to: [accent]{0}
+loaded = Loaded from: [accent]{0}
 swapped = Swapped colors
 
-canvas.new = New Canvas
+canvas.resize = Resize Canvas
 canvas.width = Width: {0}px
 canvas.height = Height: {0}px
 
