Сломал слишком много вещей

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -1,6 +1,8 @@
 ok = Ok
 cancel = Cancel
 
+empty = <empty>
+
 menu = Menu
 back = Back
 exit = Exit
@@ -12,7 +14,7 @@ file.save = Select a file to save...
 file.load = Select a file to load...
 file.name = File name:
 
-hud.size = {0}px
+hud.size = Size:
 hud.square = Square Brush
 
 saved = Saved to: [accent]{0}
@@ -20,14 +22,14 @@ loaded = Loaded from: [accent]{0}
 swapped = Swapped colors
 
 canvas.resize = Resize Canvas
-canvas.width = Width: {0}px
-canvas.height = Height: {0}px
+canvas.width = Width:
+canvas.height = Height:
 
 color.pick = Pick a color
-color.red = [red]Red: {0}
-color.green = [green]Green: {0}
-color.blue = [blue]Blue: {0}
-color.alpha = Alpha: {0}
+color.red = [red]Red:
+color.green = [green]Green:
+color.blue = [blue]Blue:
+color.alpha = Alpha:
 
 pencil.tooltip = It draws
 eraser.tooltip = It erases
