--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -5,6 +5,8 @@ empty = <empty>
 
 menu = Menu
 back = Back
+
+close = Close
 exit = Exit
 save = Save
 load = Load
@@ -38,6 +40,8 @@ line.tooltip = It does nothing LOL
 pick.tooltip = It picks
 
 layer.new = New layer
+layer.new.tooltip = Maximum amount of layers: [accent]{0}
+
 layer.remove = Remove
 layer.move.up = Move up
 layer.move.down = Move down
