--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -23,15 +23,18 @@ saved = Saved to: [accent]{0}
 loaded = Loaded from: [accent]{0}
 swapped = Swapped colors
 
-canvas.resize = Resize Canvas
-canvas.width = Width:
-canvas.height = Height:
-
-color.pick = Pick a color
+palette = Palette
 color.red = [red]Red:
 color.green = [green]Green:
 color.blue = [blue]Blue:
 color.alpha = Alpha:
+
+resize = Resize Canvas
+width = Width:
+height = Height:
+
+setting.sfxvol.title = Volume
+setting.sfxvol.description = Volume of all internal sounds
 
 pencil.tooltip = It draws
 eraser.tooltip = It erases
