добавил пару бандлов

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -42,9 +42,9 @@ fill.tooltip = It fills
 line.tooltip = It does nothing LOL
 pick.tooltip = It picks
 
-layer.new = New layer
-layer.new.tooltip = Maximum amount of layers: [accent]{0}
-
-layer.remove = Remove
+layer.default-name = New layer
 layer.move.up = Move up
 layer.move.down = Move down
+layer.new = New layer\nMaximum amount of layers: [accent]{0}
+layer.copy = Copy layer
+layer.remove = Remove layer
