улучшил палитру и починил положение холста

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -16,18 +16,14 @@ file.save = Select a file to save...
 file.load = Select a file to load...
 file.name = File name:
 
-hud.size = Size:
 hud.square = Square Brush
+hud.straight = Straight Line
 
 saved = Saved to: [accent]{0}
 loaded = Loaded from: [accent]{0}
 swapped = Swapped colors
 
 palette = Palette
-color.red = [red]Red:
-color.green = [green]Green:
-color.blue = [blue]Blue:
-color.alpha = Alpha:
 
 resize = Resize Canvas
 width = Width:
