добавил новые сообщения, рефакторнул код

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -19,9 +19,12 @@ file.name = File name:
 hud.square = Square Brush
 hud.straight = Straight Line
 
+copied = Copied
+pasted = Pasted
+swapped = Swapped colors
+
 saved = Saved to: [accent]{0}
 loaded = Loaded from: [accent]{0}
-swapped = Swapped colors
 
 palette = Palette
 
