добавил вкладу для истории

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -18,6 +18,8 @@ file.name = File name:
 
 hud.square = Square Brush
 hud.straight = Straight Line
+hud.layers = Layers
+hud.history = History
 
 copied = Copied
 pasted = Pasted
