добавил чек для color picker'а

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -16,8 +16,9 @@ file.save = Select a file to save...
 file.load = Select a file to load...
 file.name = File name:
 
-hud.square = Square Brush
-hud.straight = Straight Line
+hud.square = Square brush
+hud.straight = Straight line
+hud.pick-raw = Pick raw color
 hud.layers = Layers
 hud.history = History
 
