добавил норм operation button'ы

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -50,3 +50,9 @@ layer.move.down = Move down
 layer.new = New layer\nMaximum amount of layers: [accent]{0}
 layer.copy = Copy layer
 layer.remove = Remove layer
+
+history.layer = [gray]Layer: {0}
+history.pencil = Drawing
+history.eraser = Erasing
+history.fill = Filling
+# Дарк, добавь бандлы для остальных тулов (кроме pick естественно), мне лень
