добавил заливку при создании холста

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -35,6 +35,9 @@ resize = Resize Canvas
 width = Width:
 height = Height:
 
+new-canvas = New Canvas
+fill-background = Fill background
+
 setting.sfxvol.title = Volume
 setting.sfxvol.description = Volume of all internal sounds
 
