починил пару вещей

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -1,7 +1,7 @@
 ok = Ok
 cancel = Cancel
 
-empty = <empty>
+empty = empty
 
 menu = Menu
 back = Back
@@ -16,6 +16,10 @@ file.save = Select a file to save...
 file.load = Select a file to load...
 file.name = File name:
 
+hud.size = Size:
+hud.alpha = Alpha:
+hud.tolerance = Tolerance:
+
 hud.square = Square brush
 hud.straight = Straight line
 hud.pick-raw = Pick raw color
@@ -24,8 +28,10 @@ hud.history = History
 
 copied = Copied
 pasted = Pasted
-swapped = Swapped colors
+undone = Undone
+redone = Redone
 
+swapped = Swapped colors
 saved = Saved to: [accent]{0}
 loaded = Loaded from: [accent]{0}
 
@@ -37,9 +43,6 @@ height = Height:
 
 new-canvas = New Canvas
 fill-background = Fill background
-
-setting.sfxvol.title = Volume
-setting.sfxvol.description = Volume of all internal sounds
 
 pencil.tooltip = It draws
 eraser.tooltip = It erases
@@ -54,8 +57,7 @@ layer.new = New layer\nMaximum amount of layers: [accent]{0}
 layer.copy = Copy layer
 layer.remove = Remove layer
 
-history.layer = [gray]Layer: {0}
+history.layer = [accent]Layer: {0}
 history.pencil = Drawing
 history.eraser = Erasing
 history.fill = Filling
-# Дарк, добавь бандлы для остальных тулов (кроме pick естественно), мне лень
