обновил resize dialog

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -40,6 +40,8 @@ palette = Palette
 resize = Resize Canvas
 width = Width:
 height = Height:
+scale = Scale
+align = Align
 
 new-canvas = New Canvas
 fill-background = Fill background
@@ -57,7 +59,7 @@ layer.new = New layer\nMaximum amount of layers: [accent]{0}
 layer.copy = Copy layer
 layer.remove = Remove layer
 
-history.layer = [accent]Layer: {0}
+history.layer = [LIGHT_GRAY]Layer: {0}
 history.pencil = Drawing
 history.eraser = Erasing
 history.fill = Filling
