добавил remove operation

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -63,3 +63,4 @@ history.layer = [LIGHT_GRAY]Layer: {0}
 history.pencil = Drawing
 history.eraser = Erasing
 history.fill = Filling
+history.remove = Layer removing
