добавил надпись о необходимосте перезапуска

--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -10,3 +10,4 @@ close = Закрыть
 exit = Выход
 save = Сохранить
 load = Загрузить
+restart-required = Необходим перезапуск для применения изменений.
