--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -10,6 +10,7 @@ close = Close
 exit = Exit
 save = Save
 load = Load
+restart-required = Restart required to apply changes.
 
 file.save = Select a file to save...
 file.load = Select a file to load...
