добавил русский бандл

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -10,7 +10,7 @@ close = Close
 exit = Exit
 save = Save
 load = Load
-restart-required = Restart required to apply changes.
+restart-required = Restart required to apply language changes.
 
 file.save = Select a file to save...
 file.load = Select a file to load...
@@ -59,7 +59,7 @@ layer.new = New layer\nMaximum amount of layers: [accent]{0}
 layer.copy = Copy layer
 layer.remove = Remove layer
 
-history.layer = [LIGHT_GRAY]Layer: {0}
+history.layer = [lightgray]Layer: {0}
 history.pencil = Drawing
 history.eraser = Erasing
 history.fill = Filling
