--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -1,13 +1,66 @@
 ok = Ок
 cancel = Отмена
-
-empty = пусто
-
 menu = Меню
 back = Назад
 
+empty = пусто
+
 close = Закрыть
-exit = Выход
+exit = Выйти
 save = Сохранить
 load = Загрузить
-restart-required = Необходим перезапуск для применения изменений.
+
+restart-required = Для применения языковых настроек необходимо перезапустить приложение.
+
+file.save = Выбери файл для сохранения...
+file.load = Выбери файл для загрузки...
+file.name = Название файла:
+
+hud.size = Размер:
+hud.alpha = Прозрачность:
+hud.tolerance = Допуск:
+
+hud.square = Квадратная кисть
+hud.straight = Прямоугольная линия
+hud.pick-raw = Выбирать сырой цвет
+hud.layers = Слои
+hud.history = История
+
+copied = Скопировано
+pasted = Вставлено
+undone = Отменено
+redone = Возвращено
+
+swapped = Цвета поменялись местами
+saved = Сохранено в: [accent]{0}
+loaded = Загружено из: [accent]{0}
+
+palette = Палитра
+
+resize = Изменить размеры холста
+width = Ширина:
+height = Высота:
+scale = Масштаб
+align = Выравнивание
+
+new-canvas = Создать новый холст
+fill-background = Заливка фона
+
+pencil.tooltip = Рисует
+eraser.tooltip = Стирает
+fill.tooltip = Заливает
+line.tooltip = Ничего не делает LOL
+pick.tooltip = Выбирает цвет
+
+layer.default-name = Новый слой
+layer.move.up = Двигать вверх
+layer.move.down = Двигать вниз
+layer.new = Создать новый слой\nМаксимальное количество слоев: [accent]{0}
+layer.copy = Копировать слой
+layer.remove = Удалить слой
+
+history.layer = [lightgray]Слой: {0}
+history.pencil = Рисование
+history.eraser = Стирание
+history.fill = Заливка
+history.remove = Удаление слоя
