--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -37,13 +37,13 @@ loaded = Загружено из: [accent]{0}
 
 palette = Палитра
 
-resize = Изменить размеры холста
+resize = Изменение размеров холста
 width = Ширина:
 height = Высота:
 scale = Масштаб
-align = Выравнивание
+align = Выравн.
 
-new-canvas = Создать новый холст
+new-canvas = Создание нового холста
 fill-background = Заливка фона
 
 pencil.tooltip = Рисует
