добавил line edit tool

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -49,7 +49,7 @@ fill-background = Fill background
 pencil.tooltip = It draws
 eraser.tooltip = It erases
 fill.tooltip = It fills
-line.tooltip = It does nothing LOL
+line.tooltip = It draws a line
 pick.tooltip = It picks
 
 layer.default-name = New layer
@@ -63,4 +63,5 @@ history.layer = Layer: {0}
 history.pencil = Drawing
 history.eraser = Erasing
 history.fill = Filling
+history.line = Drawing a line
 history.remove = Layer removing
