--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -49,7 +49,7 @@ fill-background = Заливка фона
 pencil.tooltip = Рисует
 eraser.tooltip = Стирает
 fill.tooltip = Заливает
-line.tooltip = Ничего не делает LOL
+# TODO дарк, добавь бандл line.tooltip и history.line
 pick.tooltip = Выбирает цвет
 
 layer.default-name = Новый слой
