шиза на костылях

--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -41,7 +41,7 @@ resize = Изменение размеров холста
 width = Ширина:
 height = Высота:
 scale = Масштаб
-align = Выравн.
+align = Якорь
 
 new-canvas = Создание нового холста
 fill-background = Заливка фона
@@ -49,7 +49,7 @@ fill-background = Заливка фона
 pencil.tooltip = Рисует
 eraser.tooltip = Стирает
 fill.tooltip = Заливает
-# TODO дарк, добавь бандл line.tooltip и history.line
+line.tooltip = Рисует линию
 pick.tooltip = Выбирает цвет
 
 layer.default-name = Новый слой
@@ -63,4 +63,5 @@ history.layer = Слой: {0}
 history.pencil = Рисование
 history.eraser = Стирание
 history.fill = Заливка
+history.line = Рисование линии
 history.remove = Удаление слоя
