добавил create operation

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -59,7 +59,7 @@ layer.new = New layer\nMaximum amount of layers: [accent]{0}
 layer.copy = Copy layer
 layer.remove = Remove layer
 
-history.layer = Layer: {0}
+history.layer = [#999999]Layer: {0}
 history.pencil = Drawing
 history.eraser = Erasing
 history.fill = Filling
