--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -63,5 +63,5 @@ history.layer = [#999999]Layer: {0}
 history.pencil = Drawing
 history.eraser = Erasing
 history.fill = Filling
-history.line = Drawing a line
+history.line = Line drawing
 history.remove = Layer removing
