--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -10,7 +10,7 @@ exit = Выйти
 save = Сохранить
 load = Загрузить
 
-restart-required = Для применения настроек языка необходим перезапуск.
+restart-required = Необходим перезапуск для применения настроек языка.
 
 file.save = Выбери файл для сохранения...
 file.load = Выбери файл для загрузки...
