--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -64,4 +64,11 @@ history.pencil = Рисование
 history.eraser = Стирание
 history.fill = Заливка
 history.line = Рисование линии
+history.add = Добавление слоя
 history.remove = Удаление слоя
+
+extension.spx.description = Специальное расширение специально для SpriteX.\nСохраняет каждый слой по отдельности.
+extension.png.description = Идеально подходит для компьютерной графики и иконок.\nПоддерживает прозрачные изображения.
+extension.jpg.description = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
+extension.jpeg.description = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
+extension.bmp.description = Специальное расширение для программ на Windows.\nНе поддерживает прозрачные изображения.
