--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -68,8 +68,9 @@ history.add = Layer adding
 history.remove = Layer removing
 
 # TODO перевести на английский
-extension.spx.description = Специальное расширение специально для SpriteX.\nСохраняет каждый слой по отдельности.
-extension.png.description = Идеально подходит для компьютерной графики и иконок.\nПоддерживает прозрачные изображения.
-extension.jpg.description = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
-extension.jpeg.description = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
-extension.bmp.description = Специальное расширение для программ на Windows.\nНе поддерживает прозрачные изображения.
+save-format = Выбор формата для сохранения
+format.spx = Специальное расширение специально для SpriteX.\nСохраняет каждый слой по отдельности.
+format.png = Идеально подходит для компьютерной графики и иконок.\nПоддерживает прозрачные изображения.
+format.jpg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
+format.jpeg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
+format.bmp = Специальное расширение для программ на Windows.\nНе поддерживает прозрачные изображения.
