дорезал save format dialog

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -37,13 +37,13 @@ loaded = Loaded from: [accent]{0}
 
 palette = Palette
 
-resize = Resize Canvas
+resize = Resize canvas
 width = Width:
 height = Height:
 scale = Scale
 align = Align
 
-new-canvas = New Canvas
+new-canvas = New canvas
 fill-background = Fill background
 
 pencil.tooltip = It draws
@@ -67,10 +67,9 @@ history.line = Line drawing
 history.add = Layer adding
 history.remove = Layer removing
 
-# TODO перевести на английский
-save-format = Выбор формата для сохранения
-format.spx = Специальное расширение специально для SpriteX.\nСохраняет каждый слой по отдельности.
-format.png = Идеально подходит для компьютерной графики и иконок.\nПоддерживает прозрачные изображения.
-format.jpg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
-format.jpeg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
-format.bmp = Специальное расширение для программ на Windows.\nНе поддерживает прозрачные изображения.
+save-format = Save format selection
+format.spx = SpriteX document format.\nPreserves the layers structure.
+format.png = Ideal for computer graphics and icons.\nSupports transparency.
+format.jpg = Ideal for photographs and landscapes.\nDoesn't support transparency.
+format.jpeg = Ideal for photographs and landscapes.\nDoesn't support transparency.
+format.bmp = Special format for Windows programs.\nDoesn't support transparency.
