--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -37,7 +37,7 @@ loaded = Загружено из: [accent]{0}
 
 palette = Палитра
 
-resize = Изменение размеров холста
+resize = Изменение размера холста
 width = Ширина:
 height = Высота:
 scale = Масштаб
@@ -68,8 +68,8 @@ history.add = Добавление слоя
 history.remove = Удаление слоя
 
 save-format = Выбор формата для сохранения
-format.spx = Специальное расширение специально для SpriteX.\nСохраняет каждый слой по отдельности.
-format.png = Идеально подходит для компьютерной графики и иконок.\nПоддерживает прозрачные изображения.
-format.jpg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
-format.jpeg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачные изображения.
-format.bmp = Специальное расширение для программ на Windows.\nНе поддерживает прозрачные изображения.
+format.spx = Формат документов SpriteX.\nСохраняет структуру слоёв.
+format.png = Идеально подходит для компьютерной графики и иконок.\nПоддерживает прозрачность.
+format.jpg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачность.
+format.jpeg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачность.
+format.bmp = Специальный формат для программ на Windows.\nНе поддерживает прозрачность.
