--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -68,7 +68,7 @@ history.add = Layer adding
 history.remove = Layer removing
 
 save-format = Save format selection
-format.spx = SpriteX document format.\nPreserves the layers structure.
+format.spx = Special SpriteX format.\nPreserves the layers structure.
 format.png = Ideal for computer graphics and icons.\nSupports transparency.
 format.jpg = Ideal for photographs and landscapes.\nDoesn't support transparency.
 format.jpeg = Ideal for photographs and landscapes.\nDoesn't support transparency.
