--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -68,7 +68,7 @@ history.add = Добавление слоя
 history.remove = Удаление слоя
 
 save-format = Выбор формата для сохранения
-format.spx = Формат документов SpriteX.\nСохраняет структуру слоёв.
+format.spx = Специальный формат SpriteX.\nСохраняет структуру слоёв.
 format.png = Идеально подходит для компьютерной графики и иконок.\nПоддерживает прозрачность.
 format.jpg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачность.
 format.jpeg = Идеально подходит для фотографий и пейзажей.\nНе поддерживает прозрачность.
