добавил не добавленное

--- a/src/main/resources/bundles/bundle_en.properties
+++ b/src/main/resources/bundles/bundle_en.properties
@@ -20,7 +20,7 @@ hud.alpha = Alpha:
 hud.tolerance = Tolerance:
 
 hud.square = Square brush
-hud.straight = Straight line
+hud.orthogonal = Orthogonal line
 hud.pick-raw = Pick raw color
 hud.layers = Layers
 hud.history = History
