--- a/src/main/resources/bundles/bundle_ru.properties
+++ b/src/main/resources/bundles/bundle_ru.properties
@@ -21,7 +21,7 @@ hud.alpha = Прозрачность:
 hud.tolerance = Допуск:
 
 hud.square = Квадратная кисть
-hud.straight = Прямоугольная линия
+hud.orthogonal = Прямоугольная линия
 hud.pick-raw = Выбирать сырой цвет
 hud.layers = Слои
 hud.history = История
